--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -14,6 +14,10 @@ jobs:
         with:
           java-version: 1.17
 
+      - name: Start Docker - Database Container
+        run: |
+          docker-compose up -d
+
       - name: Test Application with Maven
         run: |
           mvn test
